# PashtoBench

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: LICENSE
data/translation/: pbt.jsonl
docs/: DATA_CARD.md  METHODOLOGY.md  PROJECT_CHARTER.md
src/pashtobench/: __init__.py  cache.py  cli.py  clients.py  leaderboard.py  normalise.py  prompts.py  runner.py  schema.py  score.py  validate.py
src/pashtobench/scorers/: __init__.py  qa.py  translation.py
tests/: test_cache.py  test_clients.py  test_leaderboard.py  test_normalise.py  test_qa_scorer.py  test_runner.py  test_schema.py  test_smoke.py  test_translation_scorer.py  test_validate.py
